--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
         </thead>
         <tbody>
           <tr class="even:bg-white odd:bg-indigo-50">
-            <td class="border border-gray-300 px-2 sm:px-4 py-2">30 minutes</td>
-            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">1 000 CFA</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2">8 heures</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">100 CFA</td>
           </tr>
           <tr class="bg-transparent">
-            <td class="border border-gray-300 px-2 sm:px-4 py-2">1 heure</td>
-            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">2 000 CFA</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2">24 heurs</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">150 CFA</td>
           </tr>
           <tr class="even:bg-white odd:bg-indigo-50">
-            <td class="border border-gray-300 px-2 sm:px-4 py-2">3 heures</td>
-            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">4 500 CFA</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2">1 semaine</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">400 CFA</td>
           </tr>
           <tr class="bg-transparent">
-            <td class="border border-gray-300 px-2 sm:px-4 py-2">Journée entière</td>
-            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">10 000 CFA</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2">1 mois</td>
+            <td class="border border-gray-300 px-2 sm:px-4 py-2 font-semibold">1400 CFA</td>
           </tr>
         </tbody>
       </table>
